# Netycat

./: CMakeLists.txt  README.md  appveyor.yml
data/: test1.txt
example/FileSystem/File/: File.cpp
example/FileSystem/MappedFile/: MappedFile.cpp
example/FileSystem_File/: FileSystem_File.cpp
example/FileSystem_MappedFile/: FileSystem_MappedFile.cpp
example/Filesystem_Directory/: Filesystem_Directory.cpp
example/Filesystem_File/: Filesystem_File.cpp
example/Filesystem_MappedFile/: Filesystem_MappedFile.cpp
example/Network_IPResolver/: Network_IPResolver.cpp
example/Network_TCPDaytimeSync/: Network_TCPDaytimeSync.cpp
example/Network_TCPSocketAsync/: Network_TCPSocketAsync.cpp
example/Network_TCPSocketSync/: Network_TCPSocketSync.cpp
example/Network_UDPSocketAsync/: Network_UDPSocketAsync.cpp
example/Network_UDPSocketSync/: Network_UDPSocketSync.cpp
include/Cats/: Netycat.hpp
include/Cats/Netycat/: FileSystem.hpp  Filesystem.hpp  IOExecutor.hpp  Network.hpp
include/Cats/Netycat/FileSystem/: File.hpp  MappedFile.hpp
include/Cats/Netycat/Filesystem/: Directory.hpp  File.hpp  FileInfo.hpp  FilePath.hpp  MappedFile.hpp
include/Cats/Netycat/Network/: IP.hpp  IPAddress.hpp  TCP.hpp  UDP.hpp
include/Cats/Netycat/Network/IP/: IPAddress.hpp  IPResolver.hpp
include/Cats/Netycat/Network/Impl/: Address.hpp  Socket.hpp
include/Cats/Netycat/Network/TCP/: TCPEndpoint.hpp  TCPServer.hpp  TCPSocket.hpp
include/Cats/Netycat/Network/UDP/: UDPEndpoint.hpp  UDPSocket.hpp
include/Cats/Netycat/Network/Win32/: WSA.hpp
src/Cats/Netycat/: IOExecutor.cpp
src/Cats/Netycat/FileSystem/: File.cpp  MappedFile.cpp
src/Cats/Netycat/Filesystem/: Directory.cpp  File.cpp  FileInfo.cpp  MappedFile.cpp
src/Cats/Netycat/Network/IP/: IPResolver.cpp
src/Cats/Netycat/Network/Impl/: Socket.cpp
src/Cats/Netycat/Network/TCP/: TCPServer.cpp  TCPSocket.cpp
src/Cats/Netycat/Network/UDP/: UDPSocket.cpp
src/Cats/Netycat/Network/Win32/: WSA.cpp
